--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ bleach==6.1.0
 wtforms[email]==3.1.2
 
 # Database
-psycopg[binary]==3.2.3
+# Using SQLite (built-in with Python, no additional packages needed)
 alembic==1.13.2
 
 # Cache & Rate Limiting
