--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@
 FLASK_ENV=development
 FLASK_APP=app:create_app
 SECRET_KEY=dev-secret-key-for-local-development-only
-APP_BASE_URL=http://localhost:5000
+APP_BASE_URL=https://cv-builder-2-e4lt.onrender.com/auth/callback
 
 # --------------------------------------------
 # Database - SQLite (No PostgreSQL needed!)
