--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@
 # --------------------------------------------
 # Core Application Settings
 # --------------------------------------------
-FLASK_ENV=development
+FLASK_ENV=production
 FLASK_APP=app:create_app
 SECRET_KEY=dev-secret-key-for-local-development-only
-APP_BASE_URL=https://cv-builder-2-e4lt.onrender.com
+APP_BASE_URL=https://cv-builder-2-e4lt.onrender.com/cv/dashboard/
 # --------------------------------------------
 # Database - SQLite (No PostgreSQL needed!)
 # --------------------------------------------
