--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ requests==2.32.3
 # Security & Validation
 bleach==6.1.0
 wtforms[email]==3.1.2
-
+werkzeug==2.3.0
 # Database
 # Using SQLite (built-in with Python, no additional packages needed)
 alembic==1.13.2
